# api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  index.js  master.ts  package-lock.json  package.json  readme  splash.json  tsconfig.json
.github/workflows/: deploy.yaml
src/: auth.rs  database.rs  index.ts  main.rs  setup.rs
src/data/: splash.json
src/db/: mod.rs  tables.rs
src/routes/: argon.rs  health.rs  mod.rs  root.rs  sourcequery.rs  splash.rs  teapot.rs  version.rs
