[package]
name = "api"
version = "2.7.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenvy = "0.15.7"
sqlite = "0.36.0"
tower-http = { version = "0.5.2", features = ["cors"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
rust-argon2 = "2.1.0"
base64 = "0.22.1"
ulid = "1.1.3"
